src/test/deca/syntax/invalid/intermediaire2/wrongValue/00int.deca
// Description:
//    Programme syntaxiquement invalide car il initialise un int trop grand
//
// Resultats:
//    00int.lis
//
// Historique:
//    cree le 10/06/2022

{
    int x = 2147483648;
}